--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
   <packaging>pom</packaging>
 
   <parent>
-    <groupId>com.devonfw.tools</groupId>
-    <artifactId>devonfw-docgen-html</artifactId>
-    <version>5.0.0</version>
+    <groupId>com.devonfw.website</groupId>
+    <artifactId>parent</artifactId>
+    <version>dev-SNAPSHOT</version>
   </parent>
 
   <modules>
