--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.9",
     "fs": "0.0.1-security",
+    "fs-extra": "^10.0.0",
     "node-sass": "^6.0.0",
     "path": "^0.12.7"
   }
