added new js file

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^1.0.0-rc.9",
     "fs": "0.0.1-security",
     "fs-extra": "^10.0.0",
+    "lunr": "^2.3.9",
     "node-sass": "^6.0.0",
     "path": "^0.12.7"
   }
