--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,6 +13,7 @@
     "fs": "0.0.1-security",
     "fs-extra": "^10.0.0",
     "node-sass": "^6.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.29.0"
   }
 }
