--- a/scripts/package.json
+++ b/scripts/package.json
@@ -14,6 +14,7 @@
     "fs-extra": "^10.0.0",
     "lunr": "^2.3.9",
     "node-sass": "^6.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.29.0"
   }
 }
