--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -4,7 +4,7 @@ matrix:
     lang: en
     d: en_US
   sources:
-  - documentation/*.asciidoc 
+  - solutions/*.asciidoc
   dictionary:
     wordlists:
     - en-devonfw.dict
