changed otel helm templates

--- a/solutions/monitoring_openTelemetry/helm/values.yaml
+++ b/solutions/monitoring_openTelemetry/helm/values.yaml
@@ -8,7 +8,7 @@ application:
   # Configuration of the application service
   service:
     name: "application-service-name"
-    name: "application-service-port"
+    port: "application-service-port"
 
 # Ingress configuration
 ingress:
@@ -18,9 +18,6 @@ ingress:
   jaeger:
     host: "jaeger.localhost"
     port: 16686
-  zipkin:
-    host: "zipkin.localhost"
-    port: 9411
   grafana:
     host: "grafana.localhost"
     port: 3000
