--- a/solutions/monitoring_openTelemetry/helm/templates/configmap.yaml
+++ b/solutions/monitoring_openTelemetry/helm/templates/configmap.yaml
@@ -49,25 +49,16 @@ data:
 
     exporters:
       logging:
-      zipkin:
-        endpoint: "http://zipkin-all-in-one.default.svc.cluster.local:9411/api/v2/spans"
-        format: proto
       jaeger:
         endpoint: jaeger-all-in-one.default.svc.cluster.local:14250
         insecure: true
-      prometheus:
-        endpoint: "0.0.0.0:8889"
 
     service:
       pipelines:
         traces:
           receivers: [otlp]
-          exporters: [zipkin, jaeger]
+          exporters: [jaeger]
           processors: [batch]
-        metrics:
-          receivers: [otlp]
-          processors: [batch]
-          exporters: [prometheus]
 ---
 
 apiVersion: v1
@@ -76,20 +67,6 @@ metadata:
   name: vmetrics-config
 data:
   vMetrics.yaml: |
-    scrape_configs:
-      - job_name: '{{ .Values.application.metrics.jobname }}'
-        scrape_interval: 10s
-        metrics_path: '{{ .Values.application.metrics.url }}'
-        static_configs:
-          - targets: ['{{ .Values.application.service.name }}:{{ .Values.application.service.port }}']
----
-
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: prometheus
-data:
-  prometheus-config: |
     scrape_configs:
       - job_name: '{{ .Values.application.metrics.jobname }}'
         scrape_interval: 10s
