--- a/solutions/monitoring_openTelemetry/helm/values.yaml
+++ b/solutions/monitoring_openTelemetry/helm/values.yaml
@@ -13,11 +13,11 @@ application:
 # Ingress configuration
 ingress:
   application:
-    host: "application.localhost"
+    host: "application.1399f2c255cf44ac8c5a.westeurope.aksapp.io"
     port: 8080
   jaeger:
-    host: "jaeger.localhost"
+    host: "jaeger.1399f2c255cf44ac8c5a.westeurope.aksapp.io"
     port: 16686
   grafana:
-    host: "grafana.localhost"
+    host: "grafana.1399f2c255cf44ac8c5a.westeurope.aksapp.io"
     port: 3000
