--- a/.github/workflows/assign-reviewers.yml
+++ b/.github/workflows/assign-reviewers.yml
@@ -1,8 +1,6 @@
 name: Assign Reviewers
 on:
-  pull_request:
-    branches: [ master ]  
-  workflow_dispatch:
+  pull_request
   
 jobs:
   assign_reviewers:
