--- a/.github/workflows/assign-reviewers.yml
+++ b/.github/workflows/assign-reviewers.yml
@@ -12,5 +12,5 @@ jobs:
       # uses: ohnogumi/auto-reviewers@0ac93944a127ca1c8ea55bfb3e1e3234229f8549
       uses: ohnogumi/auto-reviewers@v0.0.3
       with:
-        token: ${secrets.GITHUB_TOKEN}
+        token: ${secrets.GHA_TOKEN}
         config: .github/CODEOWNERS
