--- a/.github/workflows/previewPR.yml
+++ b/.github/workflows/previewPR.yml
@@ -116,6 +116,10 @@ jobs:
           npm install
           cd ../../
           
+      - name: Fix includes
+        run: |
+          node solutions/scripts/fixIncludeFiles.js ./solutions/solutions/
+          
       - name: Compile sass for solutions
         uses: gha-utilities/sass-build@v0.4.2
         with:
