--- a/.github/workflows/previewPR.yml
+++ b/.github/workflows/previewPR.yml
@@ -118,7 +118,7 @@ jobs:
           
       - name: Fix includes
         run: |
-          node solutions/scripts/fixIncludeFiles.js ./solutions/solutions/
+          node solutions/scripts/fixIncludeFiles.js ./solutions/solutions/ ./solutions/includes/
           
       - name: Compile sass for solutions
         uses: gha-utilities/sass-build@v0.4.2
