--- a/.github/workflows/previewPR.yml
+++ b/.github/workflows/previewPR.yml
@@ -118,6 +118,7 @@ jobs:
           
       - name: Fix includes
         run: |
+          ls -alR
           node solutions/scripts/fixIncludeFiles.js ./solutions/solutions/ ./solutions/includes/
           
       - name: Compile sass for solutions
