--- a/solutions/monitoring_openTelemetry/helm/templates/ingress.yaml
+++ b/solutions/monitoring_openTelemetry/helm/templates/ingress.yaml
@@ -4,11 +4,15 @@ metadata:
   name: ingress
   #adding azure addon annotation for http application routing 
   annotations:
-     kubernetes.io/ingress.class: addon-http-application-routing
-spec:
+    {{- if contains $.Values.application.cloud "AWS" }}
+      {{ toYaml .Values.ingress.aws.annotations | indent 2 }}
+    {{- end }}
+    {{- if contains $.Values.application.cloud "AZURE" }}
+      {{ toYaml .Values.ingress.azure.annotations | indent 2 }}
+    {{- end }}
 spec:
   rules:
-  - host: {{ .Values.ingress.application.host }}
+  - host: {{ template "ingress.application.host" . }} 
     http:
       paths:
       - path: "/"
@@ -18,7 +22,7 @@ spec:
               name: {{ .Values.application.service.name }}
               port:
                 number: {{ .Values.ingress.application.port }}
-  - host: {{ .Values.ingress.jaeger.host }}
+  - host: {{ template "ingress.jaeger.host" . }} 
     http:
       paths:
       - path: "/"
@@ -28,7 +32,7 @@ spec:
               name: jaeger-all-in-one
               port:
                 number: {{ .Values.ingress.jaeger.port }}
-  - host: {{ .Values.ingress.grafana.host }}
+  - host:  {{ template "ingress.grafana.host" . }} 
     http:
       paths:
       - path: "/"
