--- a/solutions/monitoring_openTelemetry/helm/templates/ingress.yaml
+++ b/solutions/monitoring_openTelemetry/helm/templates/ingress.yaml
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: ingress
   annotations:
+    {{- if contains $.Values.application.cloud "AWS" }}
+      {{ toYaml .Values.ingress.aws.annotations | indent 2 }}
+    {{- end }}
     {{- if contains $.Values.application.cloud "AZURE" }}
       {{ toYaml .Values.ingress.azure.annotations | indent 2 }}
     {{- end }}
