Added application, db and  services for public ip

--- a/solutions/monitoring_openTelemetry/helm/Chart.yaml
+++ b/solutions/monitoring_openTelemetry/helm/Chart.yaml
@@ -4,6 +4,8 @@ version: 1.0.0
 description: Helm chart template for an OpenTelemetry Kubernetes deployment
 appVersion: 1.0.0
 keywords:
-  - template
+  - devon4j
+  - demo
+  - quarkus
 maintainers:
   - name: devon4j Developer
