--- a/solutions/monitoring_openTelemetry/helm/templates/configmap.yaml
+++ b/solutions/monitoring_openTelemetry/helm/templates/configmap.yaml
@@ -68,8 +68,8 @@ metadata:
 data:
   vMetrics.yaml: |
     scrape_configs:
-      - job_name: '{{ .Values.application.metrics.jobname }}'
+      - job_name: 'metrics-jobname'
         scrape_interval: 10s
-        metrics_path: '{{ .Values.application.metrics.url }}'
+        metrics_path: 'metrics-url'
         static_configs:
-          - targets: ['{{ .Values.application.service.name }}:{{ .Values.application.service.port }}']
+          - targets: ['application-service-name:application-service-port']
