--- a/solutions/monitoring_openTelemetry/helm/templates/grafana-deployment.yaml
+++ b/solutions/monitoring_openTelemetry/helm/templates/grafana-deployment.yaml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    component: grafana
-  name: grafana
+    component: {{ .Values.grafana.name }}
+  name: {{ .Values.grafana.name }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      component: grafana
+      component: {{ .Values.grafana.name }}
   template:
     metadata:
       labels:
-        component: grafana
+        component: {{ .Values.grafana.name }}
     spec:
       containers:
         - image: grafana/grafana
@@ -28,12 +28,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    component: grafana
-  name: grafana
+    component: {{ .Values.grafana.name }}
+  name: {{ .Values.grafana.name }}
 spec:
   ports:
     - name: "3000"
-      port: 3000
+      port: {{ .Values.grafana.port }}
       targetPort: 3000
   selector:
-    component: grafana
+    component: {{ .Values.grafana.name }}
