--- a/solutions/monitoring_openTelemetry/helm/templates/jaeger-all-in-one-deployment.yaml
+++ b/solutions/monitoring_openTelemetry/helm/templates/jaeger-all-in-one-deployment.yaml
@@ -2,18 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    component: jaeger-all-in-one
-  name: jaeger-all-in-one
+    component: {{ .Values.jaeger.name }}
+  name: {{ .Values.jaeger.name }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      component: jaeger-all-in-one
+      component: {{ .Values.jaeger.name }}
   strategy: {}
   template:
     metadata:
       labels:
-        component: jaeger-all-in-one
+        component: {{ .Values.jaeger.name }}
     spec:
       containers:
         - image: jaegertracing/all-in-one:latest
@@ -31,12 +31,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    component: jaeger-all-in-one
-  name: jaeger-all-in-one
+    component: {{ .Values.jaeger.name }}
+  name: {{ .Values.jaeger.name }}
 spec:
   ports:
     - name: "16686"
-      port: 16686
+      port: {{ .Values.jaeger.port }}
       targetPort: 16686
     - name: "14268"
       port: 14268
@@ -45,4 +45,4 @@ spec:
       port: 14250
       targetPort: 14250
   selector:
-    component: jaeger-all-in-one
+    component: {{ .Values.jaeger.name }}
